wrote text for zadatak_3_prezentacija.ipynb

--- a/zadatak_3/zadatak_3_OLD.ipynb
+++ b/zadatak_3/zadatak_3_OLD.ipynb
@@ -451,7 +451,9 @@
   },
   {
    "cell_type": "code",
-   "source": "df_original.info()",
+   "source": [
+    "df_original.info()"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
